--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,11 @@
-[bdist_wheel]
-universal = 1
-
-[flake8]
-exclude = docs
-
 [aliases]
-# Define setup.py command aliases here
-test = pytest
+test=pytest
 
+[tool:pytest]
+addopts = 
+  --doctest-modules 
+  --cov --cov-report=term --cov-report=html
+
+[coverage:run]
+source = fuzzycorr
+branch = false
